# worldxplore

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/: tileset.psd
src/: camera.rs  main.rs  player.rs  player.wgsl  render.rs  shader.wgsl  tiles.rs  ui.rs  world.wgsl  worldgen.rs
src/assets/: tileset.psd  tileset.xcf
