[package]
name = "worldxplore"
version = "0.1.0"
authors = ["jamesmadden"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.24", features = [ "web_sys" ] }
wgpu = "0.8.0"
winit_input_helper = "0.9.0"
futures = "0.3"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
noise = "0.7.0"
rand = "0.8.3"
image = "0.23.14"