[package]
name = "worldxplore"
version = "0.2.0"
authors = ["jamesmadden"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = "0.17.0"
winit_input_helper = "0.14.1"
futures = "0.3"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
noise = "0.7.0"
rand = "0.8.3"
image = "0.23.14"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.8"
wasm-bindgen-futures = "0.4.23"